# skanlator

./: .gitignore  README.md  d.py  pyproject.toml
.pyinstaller/: run.py  skanlator.spec
app/: pyproject.toml
app/src/app/: __init__.py  config.py  files.py  log.py  worker.py
app/src/app/ui/: __init__.py  icons.py  overlay.py  region_select.py  settings.py  toolbar.py  utils.py
assets/corpus/: dialog.txt  sfx.txt
assets/fonts/: README.md
core/: pyproject.toml
core/src/core/: __init__.py  engine.py  services.py
core/src/core/capture/: __init__.py  mss.py
core/src/core/internal/: __init__.py  engine.py
core/src/core/ocr/: __init__.py  rapid.py
core/src/core/translation/: __init__.py  llama_cpp.py
core/src/core/utils/: __init__.py  event_bus.py
scripts/: generate-synthic-data.py
train/: train.ipynb
train/result/: ppocrv6_manhwa_ocr_training_report.ipynb
